--- a/admin_login.ui
+++ b/admin_login.ui
@@ -96,6 +96,19 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>10</y>
+     <width>80</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>&lt; Go Back</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
