--- a/user_login.ui
+++ b/user_login.ui
@@ -95,6 +95,19 @@
     <string>Username</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>20</y>
+     <width>81</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>&lt; Go Back</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
