--- a/user_registration.ui
+++ b/user_registration.ui
@@ -516,6 +516,19 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>20</y>
+     <width>91</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>&lt; Go Back</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
