--- a/admin_login.ui
+++ b/admin_login.ui
@@ -96,7 +96,7 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="pushButton_goback">
    <property name="geometry">
     <rect>
      <x>20</x>
