Added event logging and add log section to admin page

--- a/user_registration.ui
+++ b/user_registration.ui
@@ -516,7 +516,7 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="pushButton_goBack">
    <property name="geometry">
     <rect>
      <x>20</x>
