--- a/admin_profile.ui
+++ b/admin_profile.ui
@@ -9,9 +9,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>776</width>
-    <height>478</height>
+    <width>775</width>
+    <height>485</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="acceptDrops">
    <bool>false</bool>
@@ -68,16 +74,16 @@
   <widget class="QStackedWidget" name="stackedWidget">
    <property name="geometry">
     <rect>
-     <x>0</x>
+     <x>10</x>
      <y>70</y>
-     <width>781</width>
-     <height>401</height>
+     <width>751</width>
+     <height>411</height>
     </rect>
    </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>3</number>
    </property>
-   <widget class="QWidget" name="page">
+   <widget class="QWidget" name="page_main">
     <widget class="QPushButton" name="pushButton_userReports">
      <property name="geometry">
       <rect>
@@ -118,11 +124,11 @@
      </property>
     </widget>
    </widget>
-   <widget class="QWidget" name="page_2">
+   <widget class="QWidget" name="page_users">
     <property name="styleSheet">
      <string notr="true"/>
     </property>
-    <layout class="QGridLayout" name="gridLayout">
+    <layout class="QGridLayout">
      <property name="leftMargin">
       <number>0</number>
      </property>
@@ -138,8 +144,14 @@
      <property name="horizontalSpacing">
       <number>5</number>
      </property>
-     <item row="0" column="0">
+     <item row="1" column="0">
       <widget class="QScrollArea" name="scrollArea">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="widgetResizable">
         <bool>true</bool>
        </property>
@@ -148,17 +160,23 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>779</width>
-          <height>394</height>
+          <width>749</width>
+          <height>404</height>
          </rect>
         </property>
-        <widget class="QWidget" name="layoutWidget">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <widget class="QWidget" name="formLayoutWidget">
          <property name="geometry">
           <rect>
-           <x>20</x>
-           <y>0</y>
+           <x>10</x>
+           <y>20</y>
            <width>731</width>
-           <height>391</height>
+           <height>321</height>
           </rect>
          </property>
          <layout class="QFormLayout" name="formLayout">
@@ -171,22 +189,77 @@
           <property name="rowWrapPolicy">
            <enum>QFormLayout::WrapAllRows</enum>
           </property>
-          <property name="horizontalSpacing">
-           <number>2</number>
-          </property>
-          <property name="verticalSpacing">
-           <number>5</number>
-          </property>
          </layout>
+        </widget>
+        <widget class="QPushButton" name="pushButton_goBack">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>360</y>
+           <width>81</width>
+           <height>31</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>&lt; Go Back</string>
+         </property>
         </widget>
        </widget>
       </widget>
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="page_3"/>
-   <widget class="QWidget" name="page_4"/>
-   <widget class="QWidget" name="page_5"/>
+   <widget class="QWidget" name="page_reports">
+    <widget class="QTextBrowser" name="reports">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>30</y>
+       <width>691</width>
+       <height>311</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_goBack_2">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>360</y>
+       <width>81</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>&lt; Go Back</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="page_log">
+    <widget class="QTextBrowser" name="log">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>30</y>
+       <width>691</width>
+       <height>311</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_goBack_3">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>360</y>
+       <width>80</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>&lt; Go Back</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="page_editUser"/>
    <widget class="QWidget" name="page_6"/>
    <widget class="QWidget" name="page_7"/>
   </widget>
